# librec

./: .gitignore  .pre-commit-config.yaml  README.md  pyproject.toml  run.sh
notebooks/: librec.ipynb
report/: github.txt  main.bbl  main.tex  references.bib
src/: base_model.py  baseline.py  download.py  exploration.py  gfp.py  global_mean.py  lightgbm_model.py  lightgbm_sweep.py  main.py  ncf.py  plot.py  preprocess.py  social_ncf.py  split.py
